--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="card">
         <h3 id="compScore">Computer 0</h3>
-        <img src="rock.png" alt="" />
+        <img src="Rock.png" alt="" />
         </div>
    
          <footer>Developed by Devil Co. || Kislay Singh</footer>
